Fixed the alignment for index_mobile.

--- a/app/styles/style_mobile.css
+++ b/app/styles/style_mobile.css
@@ -1,22 +1,5 @@
 body {
 	background-color: #f9f9f9;
-	height: 100%;
-	max-width: 100%;
-	min-width: 50%;
-}
-
-div {
-	height: 60%;
-	width: 98%;
-	margin: auto;
-}
-
-div#rad {
-	display: none;
-}
-
-canvas {
-	display: none;
 }
 
 button {
@@ -24,16 +7,10 @@ button {
 	border: none;
 	color: white;
 	width: 90%;
-	margin-left: 5%;
+	margin: 5px;
 	height: 50%;
 	border-radius: 30px;
 	font-size: 9vmin;
-}
-
-input {
-	background-color: #2196F3;
-	vertical-align: middle;
-	display: none;
 }
 
 button#hide {
@@ -59,16 +36,20 @@ label {
 	border-radius: 30px;
 }
 
-.genhide {
-	position: relative;
-}
-
-.checkbox {
-	position: relative;
-	max-height: 100%;
+input {
+	background-color: #2196F3;
+	vertical-align: middle;
+	display: none;
 }
 
 .check:checked + .cblabel {
 	background-color: blue;
 }
 
+.checkbox {
+	display: none;
+}
+
+canvas {
+	width: 100%;
+}
